PN-12776 move delete logic from controller to service